[package]
name = "tfil"
version = "0.1.3"
edition = "2024"
authors = ["Akinori Musha <knu@idaemons.org>"]
default-run = "tfil"
description = "PTY proxy with configurable terminal output filters"
license = "MIT"
repository = "https://github.com/knu/tfil"
readme = "README.md"
keywords = ["pty", "terminal", "filter", "ink", "tui"]
categories = ["command-line-utilities"]

[package.metadata.release]
publish = false
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "Release version {{version}}"

[lib]
name = "tfil"
path = "src/lib.rs"

[[bin]]
name = "tfil"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
memchr = "2"
portable-pty = "0.9"
signal-hook = "0.3"
unicode-segmentation = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
